# wgpu-0.20-winit-0.30-web-example

./: Cargo.toml  README.md  index.html  web.sh
src/: lib.rs  main.rs
