[package]
name = "wgpu-winit-example"
version = "0.1.0"
edition = "2021"

[dependencies]
pollster = "0.3.0"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = ["Document", "Element", "Window", "console", "HtmlCanvasElement", "HtmlCollection"] }
wgpu = { version = "0.20.0", default-features = false, features = ["webgl", "wgsl"] }
winit = "0.30.0"

[lib]
crate-type = ["cdylib", "rlib"]
